// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayListItem Snapshot Tests > correctly displays title, artist and length of current track 1`] = `
<div>
  <div
    class="group flex w-full cursor-pointer items-center justify-between p-2 bg-light-listItem hover:bg-light-hover dark:bg-dark-bg dark:hover:bg-dark-hover"
  >
    <div
      class="flex flex-col"
    >
      <p
        class="text-lg text-light-primary dark:text-dark-primary group-hover:text-light-primary dark:group-hover:text-dark-primary"
      >
         
        Trains
         
      </p>
      <p
        class="text-sm text-light-primary dark:text-dark-primary group-hover:text-light-primary dark:group-hover:text-dark-primary"
      >
         
        Porcupine Tree
         
      </p>
    </div>
    <div
      class="text-light-accent dark:text-dark-accent pr-6 group-hover:text-light-primary dark:group-hover:text-dark-primary"
    >
      <p
        class="text-sm text-light-primary dark:text-dark-primary group-hover:text-light-primary dark:group-hover:text-dark-primary"
      >
         
        4:17
         
      </p>
    </div>
  </div>
</div>
`;

exports[`PlayListItem Snapshot Tests > displays a song with no artist provided 1`] = `
<div>
  <div
    class="group flex w-full cursor-pointer items-center justify-between p-2 bg-light-listItem hover:bg-light-hover dark:bg-dark-bg dark:hover:bg-dark-hover"
  >
    <div
      class="flex flex-col"
    >
      <p
        class="text-lg text-light-primary dark:text-dark-primary group-hover:text-light-primary dark:group-hover:text-dark-primary"
      >
         
        Blue Sky
         
      </p>
      <p
        class="text-sm text-light-primary dark:text-dark-primary group-hover:text-light-primary dark:group-hover:text-dark-primary"
      >
         
         
      </p>
    </div>
    <div
      class="text-light-accent dark:text-dark-accent pr-6 group-hover:text-light-primary dark:group-hover:text-dark-primary"
    >
      <p
        class="text-sm text-light-primary dark:text-dark-primary group-hover:text-light-primary dark:group-hover:text-dark-primary"
      >
         
        3:20
         
      </p>
    </div>
  </div>
</div>
`;

exports[`PlayListItem Snapshot Tests > displays a song with no length provided 1`] = `
<div>
  <div
    class="group flex w-full cursor-pointer items-center justify-between p-2 bg-light-now-playing dark:bg-dark-now-playing font-bold text-white"
  >
    <div
      class="flex flex-col"
    >
      <p
        class="text-lg text-light-primary dark:text-dark-primary group-hover:text-light-primary dark:group-hover:text-dark-primary"
      >
         
        Comfortably Numb
         
      </p>
      <p
        class="text-sm text-light-primary dark:text-dark-primary group-hover:text-light-primary dark:group-hover:text-dark-primary"
      >
         
        Pink Floyd
         
      </p>
    </div>
    <div
      class="text-light-accent dark:text-dark-accent pr-6 group-hover:text-light-primary dark:group-hover:text-dark-primary"
    >
      <p
        class="text-sm text-light-primary dark:text-dark-primary group-hover:text-light-primary dark:group-hover:text-dark-primary"
      >
         
        NaN:NaN
         
      </p>
    </div>
  </div>
</div>
`;

exports[`PlayListItem Snapshot Tests > displays correct song information for another song 1`] = `
<div>
  <div
    class="group flex w-full cursor-pointer items-center justify-between p-2 bg-light-listItem hover:bg-light-hover dark:bg-dark-bg dark:hover:bg-dark-hover"
  >
    <div
      class="flex flex-col"
    >
      <p
        class="text-lg text-light-primary dark:text-dark-primary group-hover:text-light-primary dark:group-hover:text-dark-primary"
      >
         
        Goliath
         
      </p>
      <p
        class="text-sm text-light-primary dark:text-dark-primary group-hover:text-light-primary dark:group-hover:text-dark-primary"
      >
         
        Karnivool
         
      </p>
    </div>
    <div
      class="text-light-accent dark:text-dark-accent pr-6 group-hover:text-light-primary dark:group-hover:text-dark-primary"
    >
      <p
        class="text-sm text-light-primary dark:text-dark-primary group-hover:text-light-primary dark:group-hover:text-dark-primary"
      >
         
        5:31
         
      </p>
    </div>
  </div>
</div>
`;
